# aviation-data-challenge-2025

./: .gitignore  README.md  load_data.sh  load_data_final.sh  main.py  pyproject.toml  tl_baseline_naive_test.ipynb  tl_small_data_viz.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  add_temporal_features-checkpoint.ipynb  clean_output-checkpoint.ipynb  evaluation_analysis-checkpoint.ipynb
data/: airline_per_flight_flightradar.csv
notebooks/: exploration.html  exploration.ipynb  tl_naive_baseline.py
notebooks/BUILD_Airport/: BUILD_Airport.ipynb
notebooks/BUILD_Flight/: BUILD_Flight.ipynb
notebooks/BUILD_FlightList/: BUILD_FlightList.ipynb
notebooks/BUILD_Flight_with_weather/: BUILD_Flight_with_weather.ipynb
notebooks/BUILD_FuelSegment/: BUILD_FuelSegment.ipynb
notebooks/explore_dataset/: explore_dataset.ipynb  tl_baseline_naive_test.ipynb  tl_naive_baseline.py  tl_same_origin_destination_viz.ipynb
notebooks/feature_build/: feature_build.ipynb
notebooks/pipeline_run_demo/: fuel_models.sqlite3  new_predictions.csv  old_predictions.csv  pipeline_run_demo.ipynb
notebooks/show_leaderboard/: show_leaderboard.ipynb
prc_challenge/cleaning/: BaseCleaning.py  CleanGeo_v0_0_0.py  CleanGeo_v0_0_1.py  CleanGeo_v0_2_0.py  __example_cleaning_step.py  __init__.py
prc_challenge/data/: EmployeeSalary.py  SupervisedDataset.py  SupervisedTabularDataset.py  TabularDataset.py  __init__.py
prc_challenge/feature_engineering/: AddAircraftType_v0_0_0.py  AddAirline_v0_0_0.py  AddAirportElevation_v0_0_0.py  __init__.py  (+19 more)
results/: README.md
scripts/: split.py
(+75 files in other folders)
