[project]
name = "prc-challenge-2025"
version = "0.1.0"
description = "ENX's contribution to EC's 2025 challenge"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2024.11.0",
    "ipykernel>=7.1.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "skore>=0.11.1",
    "skrub>=0.6.2",
]

[dependency-groups]
dev = [
    "optuna-dashboard>=0.19.0",
]
